--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer >
     <div>
-        <a href=""><button id="ft_btn"><i class="fa-brands fa-facebook fa-2xl"></i></button></a>
-        <a href=""><button id="ft_btn"><i class="fa-brands fa-twitter fa-2xl"></i></button></a>
-        <a href=""><button id="ft_btn"><i class="fa-brands fa-linkedin fa-2xl"></i></button></a>
-        <a href=""><button id="ft_btn"><i class="fa-brands fa-github fa-2xl"></i></button></a>
+        <a href="https://www.facebook.com/" target="_blank"><button id="ft_btn"><i class="fa-brands fa-facebook fa-2xl"></i></button></a>
+        <a href="https://twitter.com/" target="_blank"><button id="ft_btn"><i class="fa-brands fa-twitter fa-2xl"></i></button></a>
+        <a href="https://www.linkedin.com/" target="_blank"><button id="ft_btn"><i class="fa-brands fa-linkedin fa-2xl"></i></button></a>
+        <a href="https://github.com/" target="_blank"><button id="ft_btn"><i class="fa-brands fa-github fa-2xl"></i></button></a>
     </div>
     
     <button id="logo"><img src="../../assets/fokus_1.png" alt="FOKUS"></button>
