--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -29,13 +29,12 @@
     </div>
       
     <div id="nav-btns">
-      <button id="btn2" [ngClass]="toolbar_variable?'btn_change':'btn_original'"  routerLink="/contact" [hidden]="isAdmin">Contact</button>
-      <button id="btn2"  [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/pricing"> Pricing</button>
-      <button id="btn2" [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/aboutUs">About Us</button>
-      <button  id="btn2" [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/support" [hidden]="!isAdmin" >Support</button>
-      <button id="btn2" color="primary" [ngClass]="toolbar_variable?'btn_login_change': 'btn_login'" (click)="logout()" [hidden]="!isLoggedIn">Log Out</button>
-      <button id="btn2" color="primary" [ngClass]="toolbar_variable?'btn_login_change':'btn_login'" (click)="login()" [hidden]="isLoggedIn">Log in</button>
-      <button id="btn2" [ngClass]="toolbar_variable?'btn_signup_change':'btn_signup'" routerLink="/register" [hidden]="isLoggedIn">Sign Up</button>
+      <button id="btn3" [ngClass]="toolbar_variable?'btn_change':'btn_original'"  routerLink="/contact" [hidden]="isAdmin">Contact</button>
+      <button id="btn3"  [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/pricing"> Pricing</button>
+      <button id="btn3" [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/aboutUs">About Us</button>
+      <button id="btn3" [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/support" [hidden]="!isAdmin" >Support</button>
+      <button id="btn2" mat-fab color="warn" [ngClass]="toolbar_variable?'btn_login_change': 'btn_login'" (click)="logout()" [hidden]="!isLoggedIn"><i class="fa-solid fa-right-from-bracket"></i></button>
+      <button id="btn3" color="primary" [ngClass]="toolbar_variable?'btn_login_change':'btn_login'" (click)="login()" [hidden]="isLoggedIn">Log in</button>
     </div>
    
       
