--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -90,8 +90,8 @@ mat-toolbar>div .btn_login:hover{
 }
 
 #btn2{
-    margin-left: 450px;
-    background-color: red;
+    background-color: transparent;
+    border: 0;
 }
 
 #btn3{
@@ -149,4 +149,16 @@ mat-toolbar .btn_signup_change{
   border-radius: 15px;
 }
 
-
+#user{
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  border: 0;
+  margin-right: 8px;
+  -webkit-box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.35);
+  -moz-box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.35);
+  box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.35);
+}
