--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -70,11 +70,18 @@ h1{
     color: #2a2a2a;
 }
 
+#h3{
+    font-weight: 900px;
+    font-family: 'kanyon';
+    font-size: 20px;
+    margin-top: 10px;
+}
+
 h3{
     font-weight: 900px;
     font-family: 'kanyon';
     font-size: 20px;
-    margin-top: 20px;
+    margin-top: 120px;
 }
 
 #gif{
@@ -115,6 +122,7 @@ h3{
   .card {
     border-radius: 20px !important;
     width: 450px;
+    height: 550px;
     margin-top: -400px;
     margin-left: -100px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -135,6 +143,13 @@ h3{
     background-color: #292828;
     padding: 20px;
     margin-top: 15px;
+  }
+
+  img{
+    position: relative;
+    width: auto;
+    vertical-align: middle;
+    border-radius: 50%;
   }
   .icon-holder img {
     position: absolute;
@@ -185,4 +200,44 @@ h3{
   .tablepass {
     margin-left: 5px;
   }
-  
+
+/*==========================================================================*/
+
+
+
+.profile-picture-upload {
+  position: absolute;
+  top: 50px;
+  left: 200px;
+  display: inline;
+}
+
+.imagePreview {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  margin-right: 8px;
+  -webkit-box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.35);
+  -moz-box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.35);
+  box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.35);
+}
+
+.hidden {
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  left: -999999px;
+}
+
+#icon {
+  position: absolute;
+  width: 50px;
+  height: 100px;
+  top: 35px;
+  right: -40px;
+  background: none;
+  border: 0;
+  padding: 8px;
+  cursor: pointer;
+  outline: 0;
+}
