--- a/src/app/task-card/task-card.component.css
+++ b/src/app/task-card/task-card.component.css
@@ -117,4 +117,13 @@ border: 2px solid #FFBF00;
     
 }
 
+
+img{
+  border-radius: 50%;
+  border: 1px solid black;
+  
+  width: 20px;
+  height: 20px;
+}
+
   
