--- a/src/app/task-card/task-card.component.html
+++ b/src/app/task-card/task-card.component.html
@@ -5,7 +5,11 @@
     <div>
         
         <mat-card-header>
-          <mat-card-title>{{task.name}}</mat-card-title>
+          <mat-card-title>{{task.name}} 
+            <div>
+              <img src="../../assets/pp1.jpg" alt="profile pictures">
+            </div>
+          </mat-card-title>
           <mat-card-subtitle>{{task.description}}</mat-card-subtitle>
         </mat-card-header>
         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
@@ -30,7 +34,7 @@
         </mat-select>
     </mat-card-actions>
     <mat-card-footer>
-      <mat-progress-bar mode="determinate"></mat-progress-bar>
+      <mat-progress-bar mode="determinate" value="50"></mat-progress-bar>
     </mat-card-footer>
   </mat-card>
 
