Updated with about us component

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,92 @@
-<p>about-us works!</p>
+<div class="container">
+
+    <div class="row heading">
+      <div class="col-md-6 col-md-offset-3">    
+        <h1>
+            Brains Behind the Screen
+        </h1>
+        <h2 class="text-center bottom-line">Meet Our Team</h2>
+        <h3 class="subheading text-center">Creative Nerds</h3>
+      </div>
+    </div>
+  
+    <div class="row team-row">
+  
+      <div class="col-md-4 col-sm-6 team-wrap">
+        <div class="team-member text-center">
+          <div class="team-img">
+            <img src="http://deothemes.com/envato/enigma/html/img/team_1.jpg" alt="">
+            <div class="overlay">
+              <div class="team-details text-center">
+                <p>
+                  Our web design team will spend time with our digital marketing team.
+                </p>
+                <div class="socials mt-20">
+                  <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+                  <a href=""><i class="fa fa-envelope"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <h6 class="team-title">SELVAM KS</h6>
+          <span>Software Engineer</span>
+        </div>
+      </div>
+      <!-- end team member -->
+  
+      <div class="col-md-4 col-sm-6 team-wrap">
+        <div class="team-member text-center">
+          <div class="team-img">
+            <img src="http://deothemes.com/envato/enigma/html/img/team_2.jpg" alt="">
+            <div class="overlay">
+              <div class="team-details text-center">
+                <p>
+                  Our web design team will spend time with our digital marketing team.
+                </p>
+                <div class="socials mt-20">
+                  <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+                  <a href="#"><i class="fa fa-envelope"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <h6 class="team-title">SUJAY M</h6>
+          <span>Software Engineer</span>
+        </div>
+      </div>
+      <!-- end team member -->
+  
+      <div class="col-md-4 col-sm-6 team-wrap">
+        <div class="team-member last text-center">
+          <div class="team-img">
+            <img src="http://deothemes.com/envato/enigma/html/img/team_3.jpg" alt="">
+            <div class="overlay">
+              <div class="team-details text-center">
+                <p>
+                  Our web design team will spend time with our digital marketing team.
+                </p>
+                <div class="socials mt-20">
+                  <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                  <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>
+                  <a href="#"><i class="fa fa-envelope"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <h6 class="team-title">VINAY AROHRA</h6>
+          <span>Software Engineer</span>
+        </div>
+      </div>
+      <!-- end team member -->
+  
+    </div>
+  </div>
+
+  <footer>
+    <app-footer></app-footer>
+  </footer>
