--- a/src/app/edit-profile/edit-profile.component.css
+++ b/src/app/edit-profile/edit-profile.component.css
@@ -24,6 +24,14 @@ main {
     border-radius: 20px;
 }
 
+#file{
+  display: none;
+}
+
+#change-avatar{
+  cursor: pointer;
+}
+
 .title{
     position: absolute;
     top: 150px;
