task with 1+ users, user can  be kick out project

--- a/src/app/dialog/task-dialog/task-dialog.component.html
+++ b/src/app/dialog/task-dialog/task-dialog.component.html
@@ -28,8 +28,8 @@
 
       <mat-form-field appearance="outline" id="input4">
         <mat-label>Members</mat-label>
-        <mat-select [(ngModel)]="formData.email" name="email">
-          <mat-option *ngFor="let email of emails" [value]="email.email">
+        <mat-select [(ngModel)]="formData.memberList" name="memberList" multiple>
+          <mat-option [matTooltip]="email.email!" matTooltipPosition="left" *ngFor="let email of emails" [value]="email">
             {{email.email}}
           </mat-option>
         </mat-select>
