--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -85,7 +85,7 @@
                 <mat-card-content>
                   <div id="cards" class="container">
                     <ul *ngFor="let member of projectDetails?.assigned_empl">
-                      <li><img src="" alt=""><h3 id="contents">{{member.email}} &nbsp;&nbsp;&nbsp;<button matTooltip="Remove Member from Project" id="delete" mat-mini-fab color="accent"><mat-icon>delete</mat-icon></button></h3></li>
+                      <li><img src="" alt=""><h3 id="contents">{{member.email}} &nbsp;&nbsp;&nbsp;<button matTooltip="Remove Member from Project" id="delete" mat-mini-fab color="accent" (click)="removeMember(member)"><mat-icon>delete</mat-icon></button></h3></li>
                   </ul>
                   </div>
                 </mat-card-content>
