--- a/src/app/dialog/task-dialog/task-dialog.component.html
+++ b/src/app/dialog/task-dialog/task-dialog.component.html
@@ -45,7 +45,7 @@
 
     <div mat-dialog-actions id="btns">
       <button id="btn1" mat-flat-button (click)="onNoClick()" color="warn">Cancel</button>
-      <button mat-raised-button [mat-dialog-close]="formData.description" [disabled]="task.form.invalid" type="submit" color="primary" cdkFocusInitial>Ok</button>
+      <button mat-raised-button [mat-dialog-close]="formData.name" [disabled]="task.form.invalid" type="submit" color="primary" cdkFocusInitial>Ok</button>
     </div>
 
   </form>
