Updated with login components

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -89,9 +89,9 @@ h2{
 
 
 #forgot{
-    position: absolute;
-    top: 510px;
-    right: 350px;
+    position: relative;
+    top: -60px;
+    left: 130px;
     color: #2b2b2b;
     cursor: pointer;
     font-family: 'kanyon';
@@ -104,9 +104,8 @@ h2{
 }
 
 h3{
-    position: absolute;
-    top: 670px;
-    right: 430px;
+    position: relative;
+    top: 10px;
     color: #2b2b2b;
     cursor: pointer;
     font-family: 'kanyon';
