--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -33,15 +33,16 @@
       <button id="btn3"  [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/pricing"> Pricing</button>
       <button id="btn3" [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/about">About Us</button>
       <button id="btn3" [ngClass]="toolbar_variable?'btn_change':'btn_original'" routerLink="/support" [hidden]="!isAdmin" >Support</button>
-        <img  [hidden]="!isLoggedIn" [matMenuTriggerFor]="menu" id="user" src="{{userDetails.profile_pic}}" alt="">
-        <button *ngIf="!userDetails.profile_pic" [hidden]="!isLoggedIn" [matMenuTriggerFor]="menu" id="user"><i class="fa-solid fa-{{firstLetter}}"></i></button>
+        <img *ngIf="tokenExist" [matMenuTriggerFor]="menu" id="user" src="{{userDetails.profile_pic}}" alt="">
+        <button *ngIf="!userDetails.profile_pic && tokenExist"  [matMenuTriggerFor]="menu" id="user"><i class="fa-solid fa-{{firstLetter}}"></i></button>
         <mat-menu #menu="matMenu" xPosition="before">
-          <button id="btn2"  color="warn" [ngClass]="toolbar_variable?'btn_login_change': 'btn_login'" (click)="logout()">Log Out <i class="fa-solid 
-            fa-right-from-bracket"></i></button><br>
-            <button id="btn4" routerLink="/edit">Edit Profile <i class="fa-sharp fa-solid fa-user-pen"></i></button>
+            <h2 *ngIf="tokenExist">Hi, {{userDetails.username}}</h2>
+            <button id="btn4" routerLink="/edit">Edit Profile <i class="fa-sharp fa-solid fa-user-pen"></i></button><br>
+            <button id="btn2"  color="warn" [ngClass]="toolbar_variable?'btn_login_change': 'btn_login'" (click)="logout()">Log Out <i class="fa-solid 
+              fa-right-from-bracket"></i></button><br>
         </mat-menu>       
      
-      <button id="btn3" color="primary" [ngClass]="toolbar_variable?'btn_login_change':'btn_login'" (click)="login()" [hidden]="isLoggedIn">Log in</button>
+      <button id="btn3" color="primary" [ngClass]="toolbar_variable?'btn_login_change':'btn_login'" (click)="login()" *ngIf="!tokenExist">Log in</button>
     </div>
    
       
