--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -19,9 +19,26 @@ button{
 #contents{
     font-weight: bold;
     font-size: 20px;
-    margin-left: 30px;
-    margin-top: 20px;
+    position: relative;
+    top: -30px;
+    left: 90px;
     
+}
+
+#img{
+    position: relative;
+    top: 20px;
+    right: 20px;
+    left: 10px;
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    background-color: #fff;
+    border: 0;
+    margin-right: 8px;
+    -webkit-box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.35);
+    -moz-box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.35);
+    box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.35);
 }
 
 ul{
