--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -16,7 +16,7 @@
               <div class="pic bs-md">
                 <img src="{{userDetails.profile_pic}}" alt="Profile picture" width="4024" height="6048">
                 <label for="file" id="change-avatar" class="lx-btn"><i class="fas fa-camera-retro"></i>&nbsp;&nbsp;Change your profile picture.</label>
-                <input type="file" id="file" (change)="selectChange($event)">
+                <input type="file" accept="image/*" id="file" (change)="selectChange($event)">
               </div>
               <div class="pic-info">
                 <p><i class="fas fa-exclamation-triangle"></i>&nbsp;&nbsp;This photo will appear on the platform, in your contributions or where it is mentioned.</p>
@@ -39,30 +39,29 @@
                 <label for="email">E-mail</label>
                 <div class="input-wrapper">
                   <span class="icon"><i class="fas fa-envelope"></i></span>
-                  <input type="email" id="email" value="{{userDetails.email}}" autocomplete="username" readonly> 
+                  <input type="email" id="email" name="email_id" value="{{userDetails.email}}" [(ngModel)]="tempUser.email_id" readonly> 
                 </div>
-                <div id="email-helper" class="helper"></div>
               </div>
-              <div class="fieldset">
+              <button *ngIf="!verified" class="btn btn-outline-secondary mb-5" type="button" (click)="passChange = !passChange">chnage password</button>
+              <div *ngIf="passChange" class="fieldset">
                 <label for="pass">Current Password</label>
-                <div class="input-wrapper">
+                <div class="input-group input-wrapper">
                   <span class="icon"><i class="fas fa-key"></i></span>
-                  <input type="password" id="pass"  autocomplete="current-password">
+                  <input type="password" id="pass"  name="password" [(ngModel)]="tempUser.password" >
+                  <button class="btn btn-outline-secondary" type="button" (click)="verfiyPass()" >verify</button>
                 </div>
-                <div id="pass-helper" class="helper"></div>
               </div>
-              <div class="fieldset">
+              <div class="fieldset" *ngIf="verified">
                 <label for="pass">Password</label>
                 <div class="input-wrapper">
                   <span class="icon"><i class="fas fa-key"></i></span>
-                  <input type="password" id="pass" autocomplete="current-password">
+                  <input type="password" id="pass" autocomplete="current-password" name="password" [(ngModel)]="tempUser.password">
                 </div>
                 <div id="pass-helper" class="helper"></div>
               </div>
-              <div class="actions">
-                <a id="cancel" class="lx-btn"><i class="fas fa-ban"></i>&nbsp;&nbsp;Cancel</a>
-                <a id="clear" class="lx-btn"><i class="fas fa-broom"></i>&nbsp;&nbsp;Clear</a>
-                <a id="save" class="lx-btn"><i class="fas fa-save"></i>&nbsp;&nbsp;Save</a>
+              <div class="d-flex justify-content-evenly">
+                <button type="button" class="btn btn-outline-danger" routerLink="/dashboard"><i class="fas fa-ban"></i>&nbsp;&nbsp;Cancel</button>
+                <button type="button" class="btn btn-outline-success" (click)="changeprofile()"><i class="fas fa-save"></i>&nbsp;&nbsp;Success</button>
               </div>
             </form>
           </div>
